Crash when signing into twitter calling WebCore::DocumentLoader::responseReceived(WebCore::CachedResource*, WebCore::ResourceResponse const&). <rdar://problem/22098457> and https://bugs.webkit.org/show_bug.cgi?id=147560

Reviewed by Alexey Proskuryakov.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::willSendRequest): Only grab identifierForLoadWithoutResourceLoader() if there's no ResourceLoader.

Canonical link: https://commits.webkit.org/165625@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187740 268f45cc-cd09-0410-ab3c-d52691b4dbfc